Hoàn thiện luồng ảnh siêu âm